--- a/Xelp/App.config
+++ b/Xelp/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="TempLocation" value="C:\media\Temp" />
+    <add key="ReadyLocation" value="C:\media\Ready" />
+    <add key="IgnoreDirs" value="Sample,Subs" />
+    <add key="IgnoreFiles" value="Sample,Subs" />
+  </appSettings>
 </configuration>
